# bomkit

./: LICENSE  README.md  pyproject.toml  requirements.txt  test_diff_quick.py  test_ingest.py
bomkit/: __init__.py  column_profiler.py  lexical_similarity.py  normalizer.py  parser.py  unit_normalizer.py
bomkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
bomkit/adapters/: csv_adapter.py  excel_adapter.py
bomkit/diff/: __init__.py  change_events.py  snapshot_diff.py
bomkit/ingest/: __init__.py  snapshot_ingest.py  supabase_client.py
bomkit/schema/: __init__.py
docs/: HOW_IT_WORKS.md  NORMALIZATION_PIPELINE.md
examples/: complete_normalization.py
migrations/: add_context_to_bom_items.sql
tests/: BOM-4.csv  pcb-bom.csv  test_change_events.py  test_column_profiler.py  test_diff_quick.py  test_ingest.py  test_lexical.py  test_normalizer.py
